ajout auth pay Routes
